--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,18 @@
     font-weight: 400;
 }
 
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header {
+    text-align: center;
+    color: #333;
+}
+
 button {
     padding: .6rem 2rem;
     text-align: center;
@@ -16,9 +28,94 @@ button {
     font-size: 18px;
     color: #FFF;
     border-radius: .2rem;
+    margin: 0 auto;
+    cursor: pointer;
+    display: block;
+
 }
 
 button:active,
 button:focus {
     outline: none;
+}
+
+.container {
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+    padding: 2rem;
+    position: relative;
+    min-width: 500px;
+}
+
+
+#form {
+    margin: 2rem 0 0 0;
+}
+
+#form label {
+    display: block;
+    font-size: 1rem;
+    color: #696969;
+}
+
+#form .form-group {
+    margin: 0 0 2rem 0;
+    position: relative;
+
+}
+
+.form-control {
+    padding: .6rem .4rem;
+    display: block;
+    width: 100%;
+    border-radius: 3px;
+    border: 1px solid #dbdcdd;
+    height: 38px;
+    font-size: 1.2rem;
+    color: #808080;
+}
+
+.form-control:active,
+.form-control:focus {
+    outline: none;
+}
+
+.form-group span {
+    padding: 2px 0 0 0;
+    display: block;
+    font-size: 1rem;
+    visibility: hidden;
+}
+
+.form-group.success input {
+    border: 1px solid #34ac4f;
+}
+
+.form-group.error input {
+    border: 1px solid #ff3943;
+}
+
+.form-group.successs span {
+    color: #34ac4f;
+    visibility: visible;
+}
+
+.form-group.error span {
+    color: #ff3943;
+    visibility: visible;
+}
+
+
+
+.view-icon {
+    color: #696969;
+    position: absolute;
+    top: 34px;
+    right: 0;
+    cursor: pointer;
+    visibility: hidden;
+}
+
+.view-icon:hover {
+    color: #333;
 }
